# Projeto-Bitcoin-x-M2

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  teste.ipynb
Analysis/: BTCxgM2.sql  Data_analysis.py
Data/Bronze/: Bitcoin_raw.csv  M2_cn.json  M2_eu.json  M2_jp.csv  M2_us.csv  M2_us.json  fx.csv
Data/Bronze/M2_cn/: M2_cn2017.csv  M2_cn2018.csv  M2_cn2019.csv  M2_cn2020.csv  M2_cn2021.csv  M2_cn2022.csv  M2_cn2023.csv  M2_cn2024.csv  M2_cn2025.csv
Data/Bronze/M2_us/: M2_us.csv
Data/Gold/: Gold.db
Data/Silver/: Silver.db  Silver_raw.db
Extract/: extract_btc.py  extract_fx.py  extract_m2_cn.py  extract_m2_eu.py  extract_m2_jp.py  extract_m2_us.py
Transform/Gold_T/: BTC_m.sql  Gold_t.py  M2_global.sql  conn.py  to_DB.py
Transform/Silver_T/: Exchange.py  Silver_t.sql  btc_t.py  cn_t.py  conn.py  eu_t.py  fx_t.py  jp_t.py  to_DB.py  us_t.py
config/: airflow.cfg
dags/: dag.py
dags/src/Analysis/: Data_analysis.ipynb
dags/src/Extract/: extract_btc.py  extract_fx.py  extract_m2_cn.py  extract_m2_eu.py  extract_m2_jp.py  extract_m2_us.py
dags/src/Load/Bronze/: load_btc_bronze.py  load_fx_bronze.py  load_m2_cn_bronze.py  load_m2_eu_bronze.py  load_m2_jp_bronze.py  load_m2_us_bronze.py
dags/src/Transform/Gold_T/: Gold_t.py
dags/src/Transform/Silver_T/: Exchange.py  btc_t.py  cn_t.py  eu_t.py  fx_t.py  jp_t.py  us_t.py
