[project]
name = "pipeline-financeira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.8",
    "ccxt>=4.5.45",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "path>=17.1.1",
    "psycopg2>=2.9.11",
    "requests>=2.33.0",
    "xlrd>=2.0.2",
    "yfinance>=1.2.0",
]
